--- a/index.html
+++ b/index.html
@@ -220,8 +220,17 @@
         </div>
     </div>
 </center>
-    
-<!-- <embed src="assets/images/audio.mp3" loop="true" autostart="true" width="2" height="0"> -->
+
+<!----Map with marker-->
+<div id="map"></div>
+
+<!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap&libraries=&v=weekly"
+  async
+></script>
+
+
 
     
     <!-- Dynamic footer section -->
