--- a/projects.html
+++ b/projects.html
@@ -318,8 +318,7 @@
                 class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s"
               >
                 My projects makes use of vast variety of latest technology
-                tools. My best experience is to create Data Science projects and
-                deploy them to web applications using cloud infrastructure.
+                tools.
               </p>
             </div>
           </div>
