--- a/education.html
+++ b/education.html
@@ -304,6 +304,22 @@
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
             <h4>Graduation</h4>
             <div class="qual">
+            <h6><em>WP Carey School of Business, Arizona State University</em></h6>
+            <h6><em>Master of Science in Business Analytics (MSBA)</em></h6>
+            <h6><em>2021-2022</em></h6></div>
+            <p><i>Activities-</i> Student Ambassador</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
+        <div class="row">
+          <div class="col-xl-6 col-md-6 col-sm-12">
+            <img src="assets/images/education-page/education.png" alt="education.png">
+          </div>
+          <div class="col-xl-6 col-md-6 col-sm-12 p-5">
+            <h4>Undergrad</h4>
+            <div class="qual">
             <h6><em>National Institute of Technology, Silchar</em></h6>
             <h6><em>B.Tech, Electronics & Communication Engineering</em></h6>
             <h6><em>2013-2017</em></h6></div>
