--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
     <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">Anurag Bhattacharjee</span>
         <div class="center">
             <div>
-                <img src="assets/images/anurag1.jpg" alt="" class="rounded-circle" height="200" width="200">
+                <img src="assets/images/AB.jpg" alt="" class="rounded-circle" height="200" width="200">
             </div>
             <br/>
             <span style="display: inline;" >I am into <span class="animated-text"
-                data-words="Machine Learning, Web Development, Data Engineering, Business Intelligence"></span>
+                data-words="Machine Learning, Analytics, Data Engineering, Business Intelligence"></span>
             </span>
             <div>
                 <div class="social-icons">
 
-                    <a class="socialicon twitter" href="https://twitter.com/anuragbhattacha" target="_blank" rel="author">
+                    <a class="socialicon twitter" href="https://x.com/anurag6243?t=RGm-KkukLQtAFnWcP36xHg&s=08" target="_blank" rel="author">
                         <!-- SVG code for twitter icon -->
                         <svg class="twitter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" enable-background="new 0 0 500 500"
@@ -144,7 +144,7 @@
                         <i class="fab fa-facebook"></i>
                     </a>
 
-                    <a class="socialicon linkedin" href="https://www.linkedin.com/in/anuragbhattacharjee6243/" target="_blank" rel="author">
+                    <a class="socialicon linkedin" href="https://www.linkedin.com/in/anurag-bhattacharjee/" target="_blank" rel="author">
                         <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="35" viewBox="0 0 24 24" fill="#0e76a8"
                             stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
@@ -167,9 +167,9 @@
                         </svg>
                     </a> -->
                     
-                    <a class="socialicon kaggle" href="https://www.kaggle.com/anuragbhattacharjee" target="_blank" rel="author">
+                 <!--    <a class="socialicon kaggle" href="https://www.kaggle.com/anuragbhattacharjee" target="_blank" rel="author">
                         <i class="fab fa-kaggle"></i>
-                    </a>
+                    </a> -->
 
                     <a class="socialicon instagram" href="https://www.instagram.com/anurag_b_34" target="_blank" rel="author">
                         <!-- svg code for instagram icon -->
@@ -182,7 +182,7 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon github" href="https://github.com/Toni8215" target="_blank" rel="author">
+                    <a class="socialicon github" href="https://github.com/anurag-bhattacharjee" target="_blank" rel="author">
                         <!-- SVG code for Github icon -->
                         <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                             <!-- body -->
