--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">Anurag Bhattacharjee</span>
         <div class="center">
             <div>
-                <img src="assets/images/AB.jpg" alt="" class="rounded-circle" height="200" width="200">
+                <img src="assets/images/anurag1.jpg" alt="" class="rounded-circle" height="200" width="200">
             </div>
             <br/>
             <span style="display: inline;" >I am into <span class="animated-text"
